--- a/src/css/app.css
+++ b/src/css/app.css
@@ -37,3 +37,11 @@
   display: inline;
   padding-left: 20px;
 }
+
+.canvas-container{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
