Add vault location and fix alpha
Added bow vault location

fixed resetting alpha back to 1 after drawing circles.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -110,6 +110,10 @@
   box-shadow: #AAAAAA -15px 0px;
   margin-right: 20px;
 }
+.bowvault-legend {
+  box-shadow: #ff6a00 -15px 0px;
+  margin-right: 20px;
+}
 
 .ivy-legend {
   box-shadow: #FF00FF -15px 0px;
