--- a/src/css/app.css
+++ b/src/css/app.css
@@ -35,13 +35,16 @@ a {
   height:25px;
   background-color: #AAA;
 }
-.transparency-knob{
+.transparency-knob, .ring-transparency-knob {
   position: relative;
   height:25px;
   width:25px;
   left: 25px;
   top: 0px;
   background-color: #66F;
+}
+.ring-transparency-knob {
+	left: 120px;
 }
 
 .highlight-label {
