--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10,6 +10,43 @@ a {
 	--bs-accordion-border-color: #333333;
 }
 
+#tutorialHolder {
+	position: absolute;
+	inset: 0;
+	z-index: 10000;
+	background-color: rgba(0,0,0,0.3);
+}
+
+#findMapGuide {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1;
+
+	color: rgb(33, 37, 41);
+	background-color: white;
+}
+#findMapGuide > div {
+	padding: 16px;
+}
+#findMapGuide h4 {
+	color: inherit;
+	background-color: inherit;
+}
+#findMapGuide img {
+	border-radius: 4px;
+	border: 2px solid rgba(0,0,0,0.1);
+	margin-bottom: 4px;
+}
+#findMapGuide h5:not(:first-child) {
+	margin-top: 32px;
+}
+
+.question .badge {
+	font-size: 0.6em;
+}
+
 #feedback {
 	position: absolute;
 	top: 4px;
