--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,16 @@ a {
 	text-decoration: none;
 }
 
+#mapcanvas {
+	z-index: -2;
+}
+#overlaycanvas {
+	z-index: 1;
+	position: absolute;
+	inset: 0;
+	pointer-events: none;
+}
+
 .text-bg-dark .btn-close {
 	background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFF'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
 }
@@ -28,7 +38,7 @@ a {
 	background-color: white;
 }
 #findMapGuide > div {
-	padding: 16px;
+	margin: 16px;
 }
 #findMapGuide h4 {
 	color: inherit;
