--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,23 @@ a {
 	text-decoration: none;
 }
 
+#curtain {
+	position: absolute;
+	inset: 0;
+	z-index: 10000;
+	background-color: rgb(33, 37, 41);
+	opacity: 1;
+	transition: opacity 300ms ease-in-out;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+#curtain.hidden {
+	opacity: 0;
+	pointer-events: none;
+}
+
 #mapcanvas {
 	z-index: -2;
 }
