--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,16 @@ a {
 	text-decoration: none;
 }
 
+#mouse-position {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	color: white;
+	background: rgba(0, 0, 0, 0.6);
+	padding: 4px;
+	text-align: right;
+}
+
 #curtain {
 	position: absolute;
 	inset: 0;
